<resources>
    <string name="app_name">Examen 1</string>

    <!-- NO CHANGE ANY ITEM -->
    <string name="ErrorMsgAdd">Error when adding the information.</string>
    <string name="ErrorMsgUpdate">Error when updating the information.</string>
    <string name="ErrorMsgRemove">Error when removing the information.</string>
    <string name="ErrorMsgGetAll">Error when getting the data list.</string>
    <string name="ErrorMsgGetById">Error when getting a specific data.</string>
    <string name="MsgDataNoFound">The data was not found.</string>
    <string name="TextSave_menu">Save</string>
    <string name="TextDelete_menu">Delete</string>
    <string name="TextCancel_mnu">Cancel</string>
    <string name="MsgDuplicateDate">The information is duplicated.</string>
    <string name="MsgSaveSuccess">The information is saved successfully.</string>
    <string name="MsgDeleteSuccess">The information was deleted successfully.</string>
    <string name="TextYes">Yes</string>
    <string name="TextNo">No</string>
    <string name="TextTitleDialogQuestion">Question...</string>
    <string name="TextSaveActionQuestion">Are you sure to save the information?</string>
    <string name="TextDeleteActionQuestion">Are you sure to delete the information?</string>
    <string name="ship_activity_label">Ship Maintenance</string>
    <string name="ship_open_button">Open Ship Maintenance</string>
    <string name="ship_label_container_number">Container Number</string>
    <string name="ship_label_person">Name</string>
    <string name="ship_label_datetime">Date Time</string>
    <string name="ship_label_container_type">Container Type</string>
    <string name="ship_label_temperature">Temperature</string>
    <string name="ship_label_weight">Weight</string>
    <string name="ship_label_product">Product</string>
    <string name="ship_btn_add">Add</string>
    <string name="ship_btn_update">Update</string>
    <string name="ship_btn_delete">Delete</string>
    <string name="ship_btn_clear">Clear</string>
    <string name="ship_msg_container_required">Container number is required.</string>
    <string name="ship_msg_person_required">Maintainer name is required.</string>
    <string name="ship_msg_product_required">Please select a product.</string>
    <string name="ship_msg_container_unique">Container number must be unique.</string>
    <string name="ship_msg_datetime_not_future">Maintenance date/time cannot be in the future.</string>
    <string name="ship_msg_invalid_alphanumeric">Container number must be alphanumeric.</string>
    <string name="ship_msg_added">Record added.</string>
    <string name="ship_msg_updated">Record updated</string>
    <string name="ship_msg_deleted">Record deleted</string>
    <string name="ship_type_dry">Dry</string>
    <string name="ship_type_refrigerated">Refrigerated</string>
    <string name="ship_product_1">Bananas</string>
    <string name="ship_product_2">Coffee</string>
    <string name="ship_product_3">Electronics</string>
    <string name="ship_list_heading">Ship Maintenances</string>
    <!-- NO CHANGE ANY ITEM -->
</resources>