<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ship_tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ship_list_heading"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ship_et_container_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ship_label_container_number" />

        <EditText
            android:id="@+id/ship_et_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ship_label_person" />

        <EditText
            android:id="@+id/ship_et_datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/ship_label_datetime" />

        <Spinner
            android:id="@+id/ship_spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/ship_et_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ship_label_temperature"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/ship_et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ship_label_weight"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/ship_spinner_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/ship_btn_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ship_btn_add" />

            <Button
                android:id="@+id/ship_btn_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ship_btn_update" />

            <Button
                android:id="@+id/ship_btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ship_btn_delete" />

            <Button
                android:id="@+id/ship_btn_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ship_btn_clear" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>